--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:seed": "tsx scripts/seed.ts",
     "db:studio": "npx prisma studio",
     "db:manage": "node scripts/db-manager.js",
+    "db:init-users": "node scripts/init-users.js",
     "server": "node server/index.cjs",
     "start": "concurrently \"npm run server\" \"npm run dev\"",
     "fullstack": "npm run server"
@@ -52,13 +53,16 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tanstack/react-query": "^5.83.0",
+    "@types/multer": "^2.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "ffmpeg-static": "^5.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.462.0",
+    "multer": "^2.0.2",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -68,10 +72,12 @@
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
     "recharts": "^3.1.1",
+    "sharp": "^0.34.3",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "xlsx": "^0.18.5",
     "zod": "^3.25.76"
   },
   "devDependencies": {
